include/ghostty.h

//-------------------------------------------------------------------
// Types

// Opaque types
typedef void* ghostty_app_t;
typedef void* ghostty_config_t;
typedef void* ghostty_surface_t;
typedef enum {
  GHOSTTY_COLOR_SCHEME_LIGHT = 0,
  GHOSTTY_COLOR_SCHEME_DARK = 1,
} ghostty_color_scheme_e;
typedef struct {
  ghostty_input_trigger_tag_e tag;
  ghostty_input_trigger_key_u key;
  ghostty_input_mods_e mods;
} ghostty_input_trigger_s;
// A single parsed keybind, flattened so a leader sequence (e.g. "ctrl+k>ctrl+s")
// is one entry with multiple steps. Pointers are owned by the ghostty_config_t
// and are valid until it is freed. Produced by ghostty_config_get_keybind.
typedef struct {
  ghostty_input_trigger_s steps[GHOSTTY_KEYBIND_MAX_STEPS];
  uint32_t step_count;   // number of valid entries in steps (1 for a chord)
  const char* action;    // null-terminated action string, e.g. "new_split:right"
  uint32_t flags;        // bitfield of ghostty_binding_flags_e
} ghostty_keybind_s;
typedef struct {
  const char* message;
} ghostty_diagnostic_s;
typedef struct {
  const char* ptr;
  uintptr_t len;
  bool sentinel;
} ghostty_string_s;
typedef struct {
  ghostty_platform_e platform_tag;
  ghostty_platform_u platform;
  void* userdata;
  double scale_factor;
  float font_size;
  const char* working_directory;
  const char* command;
  ghostty_env_var_s* env_vars;
  size_t env_var_count;
  const char* initial_input;
  bool wait_after_command;
  ghostty_surface_context_e context;

  // Optional per-surface custom shader override. When set (non-empty), this
  // surface's renderer uses ONLY this shader, replacing the config's
  // custom-shader list. Embedding apprts use this for shader preview UIs.
  // The string is borrowed: it must remain valid until the surface is freed
  // (same lifetime rule as working_directory / command / initial_input).
  const char* custom_shader;
} ghostty_surface_config_s;
typedef struct {
  void* userdata;
  bool supports_selection_clipboard;
  ghostty_runtime_wakeup_cb wakeup_cb;
  ghostty_runtime_action_cb action_cb;
  ghostty_runtime_read_clipboard_cb read_clipboard_cb;
  ghostty_runtime_confirm_read_clipboard_cb confirm_read_clipboard_cb;
  ghostty_runtime_write_clipboard_cb write_clipboard_cb;
  ghostty_runtime_close_surface_cb close_surface_cb;
} ghostty_runtime_config_s;
//-------------------------------------------------------------------
// Published API

GHOSTTY_API int ghostty_init(uintptr_t, char**);
// Windows args are a WTF-16 command line, which char** above cannot
// represent, so ghostty_init ignores argv there and uses the process
// command line. Pass the command line explicitly with this instead.
// Length is in UTF-16 code units. The buffer is borrowed and must
// outlive the process's use of the args.
GHOSTTY_API int ghostty_init_wide(const uint16_t*, uintptr_t);
GHOSTTY_API ghostty_config_t ghostty_config_new();
GHOSTTY_API void ghostty_config_free(ghostty_config_t);
GHOSTTY_API ghostty_config_t ghostty_config_clone(ghostty_config_t);
GHOSTTY_API void ghostty_config_load_file(ghostty_config_t, const char*);
GHOSTTY_API void ghostty_config_load_default_files(ghostty_config_t);
// Must be called before ghostty_config_finalize. Returns false if it was
// not, or if the scheme is out of range, in which case nothing changed.
GHOSTTY_API bool ghostty_config_set_color_scheme(ghostty_config_t,
                                                 ghostty_color_scheme_e);
GHOSTTY_API bool ghostty_config_theme_is_builtin(ghostty_config_t);
// Static storage: do NOT pass the result to ghostty_string_free. The ptr is
// NULL on a build with no built-in theme.
GHOSTTY_API ghostty_string_s ghostty_config_builtin_theme(ghostty_color_scheme_e);
GHOSTTY_API void ghostty_config_finalize(ghostty_config_t);
GHOSTTY_API bool ghostty_config_get(ghostty_config_t, void*, const char*, uintptr_t);
GHOSTTY_API ghostty_input_trigger_s ghostty_config_trigger(ghostty_config_t,
                                                              const char*,
                                                              uintptr_t);
GHOSTTY_API uint32_t ghostty_config_diagnostics_count(ghostty_config_t);
GHOSTTY_API ghostty_diagnostic_s ghostty_config_get_diagnostic(ghostty_config_t, uint32_t);
GHOSTTY_API uint32_t ghostty_config_keybinds_count(ghostty_config_t);
GHOSTTY_API ghostty_keybind_s ghostty_config_get_keybind(ghostty_config_t, uint32_t);
GHOSTTY_API ghostty_string_s ghostty_config_open_path(void);
GHOSTTY_API ghostty_app_t ghostty_app_new(const ghostty_runtime_config_s*,
                                             ghostty_config_t);
GHOSTTY_API void ghostty_app_free(ghostty_app_t);
GHOSTTY_API void ghostty_app_tick(ghostty_app_t);
GHOSTTY_API void ghostty_app_set_focus(ghostty_app_t, bool);
GHOSTTY_API void ghostty_app_update_config(ghostty_app_t, ghostty_config_t);
GHOSTTY_API void ghostty_app_set_color_scheme(ghostty_app_t, ghostty_color_scheme_e);
GHOSTTY_API ghostty_surface_config_s ghostty_surface_config_new();
GHOSTTY_API ghostty_surface_t ghostty_surface_new(ghostty_app_t,
                                                     const ghostty_surface_config_s*);
GHOSTTY_API void ghostty_surface_free(ghostty_surface_t);
GHOSTTY_API void ghostty_surface_refresh(ghostty_surface_t);
GHOSTTY_API void ghostty_surface_draw(ghostty_surface_t);
GHOSTTY_API void ghostty_surface_set_size(ghostty_surface_t, uint32_t, uint32_t);
GHOSTTY_API void ghostty_surface_set_color_scheme(ghostty_surface_t,
                                                     ghostty_color_scheme_e);