windows/Ghostty/Interop/NativeMethods.cs


    /// <summary>
    /// Initialize libghostty with an explicit WTF-16 command line.
    /// </summary>
    /// <remarks>
    /// Prefer this over <see cref="Init"/> on Windows. The args vector on
    /// Windows is the raw WTF-16 command line, which the char** that
    /// ghostty_init takes cannot represent, so that entry point ignores
    /// argv and falls back to the process command line.
    ///
    /// <paramref name="len"/> is in UTF-16 code units, not bytes. The
    /// buffer is borrowed by the args iterator and must stay alive for the
    /// life of the process; see <see cref="InitWideFromProcess"/>.
    /// </remarks>
    [LibraryImport(Dll, EntryPoint = "ghostty_init_wide")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial int InitWide(IntPtr cmdline, UIntPtr len);

    /// <summary>
    /// Initialize libghostty from this process's own command line.
    /// </summary>
    /// <remarks>
    /// The marshalled buffer is intentionally never freed: libghostty keeps
    /// a reference to it for as long as the args are readable, which is the
    /// life of the process. The OS reclaims it on exit. That unmanaged copy
    /// is what discharges the borrow, so the managed string it came from may
    /// be a temporary. Do not "optimize" this into a <c>fixed</c> pointer or
    /// a pinned handle over a local: libghostty reads the buffer long after
    /// this method returns.
    ///
    /// This is also the choke point where a bare Windows subcommand becomes
    /// its <c>+action</c> form, so no caller can forget it. The rewrite is
    /// assigned back through <c>cmdline</c> on purpose: the string that gets
    /// marshalled and the string that gets measured must be the same object,
    /// or libghostty is handed a buffer longer than the length it is told and
    /// silently drops the last character of the last argument.
    /// </remarks>
    internal static int InitWideFromProcess()
    {
        var cmdline = Environment.CommandLine;
        Ghostty.Core.Cli.CliAliases.TryRewrite(cmdline, out cmdline, out _);
        var buf = Marshal.StringToHGlobalUni(cmdline);
        return InitWide(buf, (UIntPtr)cmdline.Length);
    }

    // ---- config --------------------------------------------------------

    [LibraryImport(Dll, EntryPoint = "ghostty_config_new")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttyConfig ConfigNew();

    [LibraryImport(Dll, EntryPoint = "ghostty_config_free")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void ConfigFree(GhosttyConfig config);

    [LibraryImport(Dll, EntryPoint = "ghostty_config_load_default_files")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void ConfigLoadDefaultFiles(GhosttyConfig config);

    [LibraryImport(Dll, EntryPoint = "ghostty_config_set_color_scheme")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte ConfigSetColorSchemeNative(
        GhosttyConfig config, GhosttyColorScheme scheme);

    /// <summary>
    /// Tell the config which desktop colour scheme to resolve against.
    /// Returns false if nothing changed, which for a well-formed scheme
    /// means the config was already finalized and the call came too late.
    /// </summary>
    internal static bool ConfigSetColorScheme(GhosttyConfig config, GhosttyColorScheme scheme)
        => ConfigSetColorSchemeNative(config, scheme) != 0;

    [LibraryImport(Dll, EntryPoint = "ghostty_config_theme_is_builtin")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte ConfigThemeIsBuiltinNative(GhosttyConfig config);

    /// <summary>
    /// Whether the config resolved its colours from the built-in theme pair,
    /// i.e. nothing anywhere in the loaded config set <c>theme</c>. Asked of
    /// libghostty rather than of the config file, because <c>theme</c> can be
    /// set in a file reached through <c>config-file</c>.
    /// </summary>
    internal static bool ConfigThemeIsBuiltin(GhosttyConfig config)
        => ConfigThemeIsBuiltinNative(config) != 0;

    /// <summary>
    /// The built-in theme text for a scheme, in config file syntax.
    /// </summary>
    /// <remarks>
    /// The returned string points at static storage on the native side. It
    /// must not be freed, which makes it the one exception among this file's
    /// <see cref="GhosttyString"/> producers -- see the note on the
    /// declaration in ghostty.h.
    /// </remarks>
    [LibraryImport(Dll, EntryPoint = "ghostty_config_builtin_theme")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttyString ConfigBuiltinTheme(GhosttyColorScheme scheme);

    [LibraryImport(Dll, EntryPoint = "ghostty_config_finalize")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void ConfigFinalize(GhosttyConfig config);

    // Layer an additional config file on top of already-loaded config
    // (e.g. the High Contrast override). Path is null-terminated UTF-8;
    // StringMarshalling.Utf8 is a [LibraryImport] option, not a [MarshalAs],
    // so it coexists with DisableRuntimeMarshalling (see the clipboard
    // request binding for the same rationale).
    [LibraryImport(Dll, EntryPoint = "ghostty_config_load_file",
        StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void ConfigLoadFile(GhosttyConfig config, string path);

    [LibraryImport(Dll, EntryPoint = "ghostty_config_clone")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttyConfig ConfigClone(GhosttyConfig config);

    // Raw P/Invoke returns byte (C99 _Bool). The internal wrapper below
    // converts to bool so call sites in ConfigService stay idiomatic.
    [LibraryImport(Dll, EntryPoint = "ghostty_config_get")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial byte ConfigGetNative(GhosttyConfig config, IntPtr output, IntPtr key, UIntPtr keyLen);

    internal static bool ConfigGet(GhosttyConfig config, IntPtr output, IntPtr key, UIntPtr keyLen)
        => ConfigGetNative(config, output, key, keyLen) != 0;

    [LibraryImport(Dll, EntryPoint = "ghostty_config_trigger")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttyInputTrigger ConfigTrigger(GhosttyConfig config, IntPtr action, UIntPtr actionLen);

    [LibraryImport(Dll, EntryPoint = "ghostty_config_diagnostics_count")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial uint ConfigDiagnosticsCount(GhosttyConfig config);

    [LibraryImport(Dll, EntryPoint = "ghostty_config_get_diagnostic")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttyDiagnostic ConfigGetDiagnostic(GhosttyConfig config, uint index);

    [LibraryImport(Dll, EntryPoint = "ghostty_config_keybinds_count")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial uint ConfigKeybindsCount(GhosttyConfig config);

    [LibraryImport(Dll, EntryPoint = "ghostty_config_get_keybind")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttyKeybindC ConfigGetKeybind(GhosttyConfig config, uint idx);

    [LibraryImport(Dll, EntryPoint = "ghostty_config_open_path")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttyString ConfigOpenPath();

    // ---- app -----------------------------------------------------------

    [LibraryImport(Dll, EntryPoint = "ghostty_app_new")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttyApp AppNew(in GhosttyRuntimeConfig runtime, GhosttyConfig config);

    [LibraryImport(Dll, EntryPoint = "ghostty_app_free")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void AppFree(GhosttyApp app);

    [LibraryImport(Dll, EntryPoint = "ghostty_app_tick")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void AppTick(GhosttyApp app);

    [LibraryImport(Dll, EntryPoint = "ghostty_app_set_focus")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    private static partial void AppSetFocusNative(GhosttyApp app, byte focused);

    internal static void AppSetFocus(GhosttyApp app, bool focused)
        => AppSetFocusNative(app, focused ? (byte)1 : (byte)0);

    [LibraryImport(Dll, EntryPoint = "ghostty_app_set_color_scheme")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void AppSetColorScheme(GhosttyApp app, GhosttyColorScheme scheme);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_set_color_scheme")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceSetColorScheme(GhosttySurface surface, GhosttyColorScheme scheme);

    [LibraryImport(Dll, EntryPoint = "ghostty_app_update_config")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void AppUpdateConfig(GhosttyApp app, GhosttyConfig config);

    // ---- surface lifecycle ---------------------------------------------

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_config_new")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttySurfaceConfig SurfaceConfigNew();

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_new")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial GhosttySurface SurfaceNew(GhosttyApp app, in GhosttySurfaceConfig config);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_free")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceFree(GhosttySurface surface);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_refresh")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceRefresh(GhosttySurface surface);

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_draw")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceDraw(GhosttySurface surface);

    // ---- surface size / scale / focus ----------------------------------

    [LibraryImport(Dll, EntryPoint = "ghostty_surface_set_size")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
    internal static partial void SurfaceSetSize(GhosttySurface surface, uint width, uint height);
